--- a/.classpath
+++ b/.classpath
@@ -2,8 +2,9 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="C:/Users/Davi/STS/IRose/libs/gerenciarme-stp-1.1.5.jar" sourcepath="/GerenciarmeSTP"/>
+	<classpathentry kind="lib" path="C:/Users/Davi/STS/IRose/libs/gerenciarme-sdao-1.0.0.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Davi/STS/IRose/libs/gerenciarme-sjson-1.0.0.jar"/>
-	<classpathentry kind="lib" path="libs/gerenciarme-sdao-1.0.0.jar" sourcepath="/GerenciarmeSDAO"/>
+	<classpathentry kind="lib" path="C:/Users/Davi/STS/IRose/libs/gerenciarme-stp-1.1.5.jar" sourcepath="/GerenciarmeSTP"/>
+	<classpathentry kind="lib" path="C:/Users/Davi/STS/IRose/libs/mysql-connector-java-5.1.38-bin.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
